<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.marketRecognizerApp.ui.signup.SignUpFragmentViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutSignUp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_light_color">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05">
        </androidx.constraintlayout.widget.Guideline>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95">
        </androidx.constraintlayout.widget.Guideline>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05">
        </androidx.constraintlayout.widget.Guideline>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.40">
        </androidx.constraintlayout.widget.Guideline>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.70">
        </androidx.constraintlayout.widget.Guideline>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.30">
        </androidx.constraintlayout.widget.Guideline>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.72">
        </androidx.constraintlayout.widget.Guideline>

        <ImageView
            android:id="@+id/imageViewLogoMain"
            android:layout_width="256dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/guideline_6"
            app:layout_constraintEnd_toEndOf="@id/guideline_5"
            app:layout_constraintStart_toStartOf="@id/guideline_4"
            app:layout_constraintTop_toTopOf="@id/guideline_3"
            app:srcCompat="@drawable/camera_ai_icon">
        </ImageView>

        <TextView
            android:id="@+id/textViewSignUpTitle"
            style="@style/defaultTextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_title"
            app:layout_constraintStart_toStartOf="@id/guideline_1"
            app:layout_constraintTop_toBottomOf="@id/imageViewLogoMain">
        </TextView>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutSignUpEmail"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_default_label"
            app:layout_constraintEnd_toEndOf="@id/guideline_2"
            app:layout_constraintStart_toStartOf="@id/guideline_1"
            app:layout_constraintTop_toBottomOf="@id/textViewSignUpTitle">

            <EditText
                android:id="@+id/editTextEmail"
                style="@style/defaultEditText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:hint="@string/sign_up_email"
                app:layout_constraintBottom_toBottomOf="@+id/constraintLayoutSignUpEmail"
                app:layout_constraintEnd_toEndOf="@+id/constraintLayoutSignUpEmail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/constraintLayoutSignUpEmail">
            </EditText>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textViewSignUpEmailError"
            style="@style/signUpErrorTexts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@id/guideline_1"
            app:layout_constraintTop_toBottomOf="@id/constraintLayoutSignUpEmail">
        </TextView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutSignUpUserName"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_default_label"
            app:layout_constraintEnd_toEndOf="@id/guideline_2"
            app:layout_constraintStart_toStartOf="@id/guideline_1"
            app:layout_constraintTop_toBottomOf="@id/textViewSignUpEmailError">

            <EditText
                android:id="@+id/editTextUserName"
                style="@style/defaultEditText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:hint="@string/sign_up_user_name"
                app:layout_constraintBottom_toBottomOf="@+id/constraintLayoutSignUpUserName"
                app:layout_constraintEnd_toEndOf="@+id/constraintLayoutSignUpUserName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/constraintLayoutSignUpUserName">
            </EditText>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textViewSignUpUserNameError"
            style="@style/signUpErrorTexts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@id/guideline_1"
            app:layout_constraintTop_toBottomOf="@id/constraintLayoutSignUpUserName">
        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            style="@style/passwordFieldLayout"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:theme="@style/PasswordToggleTransparent"
            app:errorEnabled="true"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@id/guideline_2"
            app:layout_constraintStart_toStartOf="@id/guideline_1"
            app:layout_constraintTop_toBottomOf="@id/textViewSignUpUserNameError"
            app:passwordToggleDrawable="@drawable/password_selector_state">

            <EditText
                android:id="@+id/editTextPassword"
                style="@style/passwordField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/sign_up_password">
            </EditText>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textViewSignUpUserPasswordError"
            style="@style/signUpErrorTexts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@id/guideline_1"
            app:layout_constraintTop_toBottomOf="@id/textInputPassword">
        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPasswordRetry"
            style="@style/passwordFieldLayout"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:theme="@style/PasswordToggleTransparent"
            app:errorEnabled="true"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@id/guideline_2"
            app:layout_constraintStart_toStartOf="@id/guideline_1"
            app:layout_constraintTop_toBottomOf="@id/textViewSignUpUserPasswordError"
            app:passwordToggleDrawable="@drawable/password_selector_state">

            <EditText
                android:id="@+id/editTextPasswordRetry"
                style="@style/passwordField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/sign_up_password_re_enter">
            </EditText>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textViewSignUpUserPasswordRetryError"
            style="@style/signUpErrorTexts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@id/guideline_1"
            app:layout_constraintTop_toBottomOf="@id/textInputPasswordRetry">
        </TextView>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSignUp"
            style="@style/SignUpButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login_sign_up"
            android:throttleClick="@{() -> viewModel.signUpClicked()}"
            app:layout_constraintEnd_toEndOf="@id/guideline_2"
            app:layout_constraintStart_toStartOf="@id/guideline_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewSignUpUserPasswordRetryError">
        </androidx.appcompat.widget.AppCompatButton>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>